refactor: Java Stream toList()
- Stream API를 사용할 때 collect(Collectors.toList()) 대신 toList()를 사용하여 간결성과 가독성을 높였습니다.